# ALSE

./: SKYNET.db  tablas.cpp
APLICACION_GRAFICA/: CMakeLists.txt  alertas.cpp  alertas.h  alertas.ui  inicio.cpp  inicio.h  inicio.ui  login.cpp  login.h  login.ui  registrar.cpp  registrar.h  registrar.ui
APLICACIÓN_CONSOLA/: CMakeLists.txt  db_local.cpp  db_local.h  main.cpp  sensor.cpp  sensor.h
BASE_DATOS_PROYECTO/: CMakeLists.txt
